arrayProtoPrivateFuncConcatMemcpy needs to be down with firstArray being undecided https://bugs.webkit.org/show_bug.cgi?id=172369

Reviewed by Mark Lam.
JSTests:


* stress/undecided-concat.js: Added.

Source/JavaScriptCore:


* heap/Subspace.cpp: Reshaped the code a bit to aid debugging.
(JSC::Subspace::allocate):
(JSC::Subspace::tryAllocate):
* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoPrivateFuncConcatMemcpy): Fix the bug!
* runtime/ObjectInitializationScope.cpp: Provide even better feedback.
(JSC::ObjectInitializationScope::verifyPropertiesAreInitialized):

Tools:


Because I wrote a test that relies on the NoCJIT config scribbling free cells, I thought it
would be a good idea to write this down.

* Scripts/run-jsc-stress-tests:



Canonical link: https://commits.webkit.org/189269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217135 268f45cc-cd09-0410-ab3c-d52691b4dbfc